// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stricter adapter returns the correct stricter config when existing rules clash with the techstack rules 1`] = `
Object {
  "plugins": Array [
    "plugin-a",
    "plugin-b",
    "plugin-c",
  ],
  "rules": Object {
    "rule-a": Array [
      Object {
        "config": Object {
          "foo": "bar-a-a",
        },
        "include": Array [
          /\\^foo\\\\//,
        ],
        "level": "error",
      },
      Object {
        "config": Object {
          "foo": "bar-a-b",
        },
        "include": Array [
          /\\^foo\\\\//,
        ],
        "level": "error",
      },
      Object {
        "config": Object {
          "foo": "bar-a-c",
        },
        "level": "error",
      },
    ],
    "rule-b": Array [
      Object {
        "config": Object {
          "foo": "bar-b-a",
        },
        "include": Array [
          /\\^foo\\\\//,
        ],
        "level": "error",
      },
      Object {
        "config": Object {
          "foo": "bar-b-b",
        },
        "level": "error",
      },
      Object {
        "config": Object {
          "foo": "bar-b-c",
        },
        "level": "error",
      },
    ],
    "rule-c": [Function],
    "rule-d": [Function],
  },
}
`;

exports[`Stricter adapter returns the correct stricter config when existing rules clash with the techstack rules 2`] = `
Object {
  "rule-a": Array [
    Object {
      "config": Object {
        "foo": "bar-a-a",
      },
      "include": Array [
        /\\^foo\\\\//,
      ],
      "level": "error",
    },
    Object {
      "config": Object {
        "foo": "bar-a-b",
      },
      "include": Array [
        /\\^foo\\\\//,
      ],
      "level": "error",
    },
    Object {
      "config": Object {
        "foo": "bar-a-c",
      },
      "level": "error",
    },
  ],
  "rule-b": Array [
    Object {
      "config": Object {
        "foo": "bar-b-a",
      },
      "include": Array [
        /\\^foo\\\\//,
      ],
      "level": "error",
    },
    Object {
      "config": Object {
        "foo": "bar-b-b",
      },
      "level": "error",
    },
    Object {
      "config": Object {
        "foo": "bar-b-c",
      },
      "level": "error",
    },
  ],
  "rule-c": Array [
    Object {
      "config": Object {
        "foo": "bar-c-a",
      },
      "include": Array [
        /\\^foo\\\\//,
      ],
      "level": "error",
    },
    Object {
      "config": Object {
        "foo": "bar-c-b",
      },
      "include": Array [
        /\\^foo\\\\//,
      ],
      "level": "error",
    },
    Object {
      "config": Object {
        "foo": "bar-c-c",
      },
      "level": "error",
    },
  ],
  "rule-d": Array [
    Object {
      "config": Object {
        "foo": "bar-d-a",
      },
      "include": Array [
        /\\^foo\\\\//,
      ],
      "level": "error",
    },
    Object {
      "config": Object {
        "foo": "bar-d-b",
      },
      "level": "error",
    },
    Object {
      "config": Object {
        "foo": "bar-d-c",
      },
      "level": "error",
    },
  ],
}
`;

exports[`Stricter adapter returns the correct stricter config 1`] = `
Object {
  "plugins": Array [
    "plugin-e",
    "plugin-a",
    "plugin-b",
    "plugin-c",
  ],
  "rules": Object {
    "rule-a": Array [
      Object {
        "config": Object {
          "foo": "bar-a-a",
        },
        "include": Array [
          /\\^foo\\\\//,
        ],
        "level": "error",
      },
      Object {
        "config": Object {
          "foo": "bar-a-b",
        },
        "include": Array [
          /\\^foo\\\\//,
        ],
        "level": "error",
      },
    ],
    "rule-b": Array [
      Object {
        "config": Object {
          "foo": "bar-b-a",
        },
        "include": Array [
          /\\^foo\\\\//,
        ],
        "level": "error",
      },
    ],
    "rule-c": Array [
      Object {
        "config": Object {
          "foo": "bar-c-a",
        },
        "include": Array [
          /\\^foo\\\\//,
        ],
        "level": "error",
      },
      Object {
        "config": Object {
          "foo": "bar-c-b",
        },
        "include": Array [
          /\\^foo\\\\//,
        ],
        "level": "error",
      },
    ],
    "rule-d": Array [
      Object {
        "config": Object {
          "foo": "bar-d-a",
        },
        "include": Array [
          /\\^foo\\\\//,
        ],
        "level": "error",
      },
    ],
    "rule-e": Object {
      "config": Object {
        "foo": "bar-e-a",
      },
      "level": "error",
    },
  },
}
`;
